--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen"/>
 
     <!--Import sidenav.css-->
-    <link type="text/css" rel="stylesheet" href="css/sidenav-compact.css" media="screen"/>
+    <link type="text/css" rel="stylesheet" href="css/sidenav.css" media="screen"/>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
@@ -149,15 +149,15 @@
         </div>
 
       </div>
-    </div>
-  </main>
 
-  <footer class="page-footer grey darken-3">
-    <!--#include virtual="footer.html" -->
-  </footer>
-  <!--JavaScript at end of body for optimized loading-->
-  <script src="js/materialize.js"></script>
-  <script>
-    M.AutoInit();
-  </script>
-</body>
+    </main>
+
+    <footer class="page-footer grey darken-3">
+      <!--#include virtual="footer.html" -->
+    </footer>
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="js/materialize.js"></script>
+    <script>
+      M.AutoInit();
+    </script>
+  </body>
