Changed include and image paths to absolute paths beginning with / (webroot)

--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
   <nav class="grey darken-3">
     <div class="nav-wrapper">
       <a href="/" class="brand-logo center">
-        <img src="pics/FAI.png" class="responsive-img hide-on-small-only" style="padding-top:2%" width="40%" alt="">
+        <img src="/pics/FAI.png" class="responsive-img hide-on-small-only" style="padding-top:2%" width="40%" alt="">
         <span class="hide-on-med-and-up">FAI</span>
 
       </a>
