--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen"/>
+    <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen"/>
 
     <!--Import sidenav.css-->
-    <link type="text/css" rel="stylesheet" href="css/sidenav.css" media="screen"/>
+    <link type="text/css" rel="stylesheet" href="/css/sidenav.css" media="screen"/>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8"/>
     <title>FAI - Fully Automatic Installation</title>
   </head>
 
   <body>
     <header>
-      <!--#include virtual="header.html" -->
+      <!--#include virtual="/header.html" -->
     </header>
     <main>
       <div class="container">
@@ -153,10 +153,10 @@
     </main>
 
     <footer class="page-footer grey darken-3">
-      <!--#include virtual="footer.html" -->
+      <!--#include virtual="/footer.html" -->
     </footer>
     <!--JavaScript at end of body for optimized loading-->
-    <script src="js/materialize.js"></script>
+    <script src="/js/materialize.js"></script>
     <script>
       M.AutoInit();
     </script>
