build "videos" section

--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -24,46 +24,49 @@
     </header>
     <main>
       <div class="container">
-        <h2>Videos</h2>
+        <div class="row">
+          <div class="col s12">
+            <h4>Videos</h4>
+            <ul>
+              <li>
+                &bullet; Cross-architecture building an ARM64 disk image:
+                <a href="https://youtu.be/5eZcMTT70rg">
+                  Video in english</a>
+                (<a href="fai-5.4-cross-architecture.mp4">download 49MB</a>)
+                <a href="https://fai-project.org/logs/armhost/last/">log files</a>
+              </li>
+              <li>
+                &bullet; FAI 5.0 server installation from CD:
+                <a href="https://youtu.be/POOuZdWmnqA">
+                  Video in german
+                </a>
+                (<a href="faiserver-install.avi">download 19MB</a>)
+              </li>
+              <li>
+                &bullet; Four different machines are installed simultaneously:
+                <a href="https://youtu.be/btbqz_hVfpo">
+                  Video in german about FAI 5.0</a>
+                (<a href="fai-5.0.avi">download 105MB</a>)
+              </li>
+              <li>
+                &bullet; Ubuntu Oneiric (11.10) installation
+                <a href="http://www.youtube.com/watch?v=yLIZL_iyAww">Video 1</a>,
+                <a href="http://www.youtube.com/watch?v=nW5MS3_pzyY">Video 2</a>,
+                <a href="https://www.youtube.com/watch?v=1Vw9NJ9KVfE">Video 3</a>
+              </li>
+              <li>
+                &bullet; <a href="https://www.youtube.com/watch?v=wpLPRG3QA64">Demo video</a>
+                for
+                <a href="https://www.tuxedocomputers.com/TUXEDO-WebFAI.geek">WebFAI</a>
+              </li>
+              <li>
+                &bullet; <a href="../talks">Videos of talks about FAI</a>
+              </li>
+            </ul>
+          </div>
+        </div>
 
-        <ul>
-          <li>
-            Cross-architecture building an ARM64 disk image:
-            <a href="https://youtu.be/5eZcMTT70rg">
-              Video in english</a>
-            (<a href="fai-5.4-cross-architecture.mp4">download 49MB)</a>
-            <a href="https://fai-project.org/logs/armhost/last/">log files</a>
-          </li>
-          <li>
-            FAI 5.0 server installation from CD:
-            <a href="https://youtu.be/POOuZdWmnqA">
-              Video in german
-            </a>
-            (<a href="faiserver-install.avi">download 19MB)</a>.
-          </li>
-          <li>
-            Four different machines are installed simultaneously.:
-            <a href="https://youtu.be/btbqz_hVfpo">
-              Video in german about FAI 5.0</a>
-            (<a href="fai-5.0.avi">download 105MB)</a>.
-          </li>
-          <li>
-            Ubuntu Oneiric (11.10) installation
-            <a href="http://www.youtube.com/watch?v=yLIZL_iyAww">Video 1</a>,
-            <a href="http://www.youtube.com/watch?v=nW5MS3_pzyY">Video 2</a>,
-            <a href="https://www.youtube.com/watch?v=1Vw9NJ9KVfE">Video 3</a>
-          </li>
-          <li>
-            <a href="https://www.youtube.com/watch?v=wpLPRG3QA64">Demo video</a>
-            for
-            <a href="https://www.tuxedocomputers.com/TUXEDO-WebFAI.geek">WebFAI</a>
-          </li>
-          <li>
-            <a href="../talks">Videos of talks about FAI</a>
-          </li>
-        </ul>
-
-        <h2>The fai-monitor GUI</h2>
+        <h4>The fai-monitor GUI</h4>
         The FAI monitor daemon (fai-monitor) receives small messages from each install client (<a href="/logs/fai-monitor.log">sample log file of fai-monitor</a>), which describes what each client is doing at the moment. The GUI creates a nice table and is showing all actions in real time for all clients.
 
         <a href="fai-monitor.gif"><img alt="An example of the fai-monitor-gui" src="faimond.png" width="600" border="0"/></a>
