--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -1,47 +1,135 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
-      <title>Fully Automatic Installation - Slideshow</title>
-      <meta name="Title" content="FAI - Slideshow" />
-      <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
-	  <!--[if lte IE 6]>
-	  <link rel="stylesheet" type="text/css" href="/css/ie6_or_less.css" />
-	  <![endif]-->
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen"/>
+
+    <!--Import sidenav.css-->
+    <link type="text/css" rel="stylesheet" href="/css/sidenav.css" media="screen"/>
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+
+    <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8"/>
+    <title>Fully Automatic Installation - Slideshow</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <style>
+      @font-face {
+        font-family: 'Material Icons';
+        font-style: normal;
+        font-weight: 400;
+        src: local('Material Icons'), local('MaterialIcons-Regular'), url("https://fonts.gstatic.com/s/materialicons/v18/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2") format('woff2');
+      }
+
+      .material-icons {
+        font-family: 'Material Icons';
+        font-weight: normal;
+        font-style: normal;
+        font-size: 24px;
+        line-height: 1;
+        letter-spacing: normal;
+        text-transform: none;
+        display: inline-block;
+        white-space: nowrap;
+        word-wrap: normal;
+        direction: ltr;
+        -moz-font-feature-settings: 'liga';
+        -moz-osx-font-smoothing: grayscale;
+      }
+
+      .middle-indicator {
+        position: absolute;
+        top: 50%;
+      }
+      .middle-indicator-text {
+        font-size: 4.2rem;
+      }
+      a.middle-indicator-text {
+        color: white !important;
+      }
+      .content-indicator {
+        width: 64px;
+        height: 64px;
+        background: none;
+        -moz-border-radius: 50px;
+        -webkit-border-radius: 50px;
+        border-radius: 50px;
+      }
+      .indicators {
+        visibility: hidden;
+      }
+    </style>
   </head>
 
-  <body id="type-b">
-    <div id="wrap">
-      <div id="header">
-	<div id="site-name">
-	  <a href="/">FAI - Fully Automatic Installation</a>
-	</div>
-<!-- removed header-menu-unused.htm -->
+  <body>
+    <header>
+      <!--#include virtual="/header.html" -->
+    </header>
+    <main>
+      <div class="container">
+        <div class="carousel carousel-slider center " data-indicators="true">
+          <div class="carousel-fixed-item center middle-indicator">
+            <div class="left">
+              <a href="Previo" class="movePrevCarousel middle-indicator-text waves-effect waves-light content-indicator">
+                <i class="material-icons left  middle-indicator-text">chevron_left</i>
+              </a>
+            </div>
+
+            <div class="right">
+              <a href="Siguiente" class=" moveNextCarousel middle-indicator-text waves-effect waves-light content-indicator">
+                <i class="material-icons right middle-indicator-text">chevron_right</i>
+              </a>
+            </div>
+          </div>
+          <div class="carousel-item red white-text" href="#one!">
+            <h2>First Panel</h2>
+            <p class="white-text">This is your first panel</p>
+          </div>
+          <div class="carousel-item amber white-text" href="#two!">
+            <h2>Second Panel</h2>
+            <p class="white-text">This is your second panel</p>
+          </div>
+          <div class="carousel-item green white-text" href="#three!">
+            <h2>Third Panel</h2>
+            <p class="white-text">This is your third panel</p>
+          </div>
+          <div class="carousel-item blue white-text" href="#four!">
+            <h2>Fourth Panel</h2>
+            <p class="white-text">This is your fourth panel</p>
+          </div>
+        </div>
       </div>
+    </main>
+    <footer class="page-footer grey darken-3">
+      <!--#include virtual="/footer.html" -->
+    </footer>
 
-<!--#include virtual="/menu.html" -->
-      <div id="content">
-<!-- removed breadcrumb -->
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="/js/materialize.js"></script>
+    <script>
+      M.AutoInit();
+    </script>
+    <script>
+      $('.carousel.carousel-slider').carousel({fullWidth: true, indicators: false});
 
-<h1 class="page_title">FAI CD Slideshow (1 of 16)</h1>
+      // move next carousel
+      $('.moveNextCarousel').click(function (e) {
+        e.preventDefault();
+        e.stopPropagation();
+        $('.carousel').carousel('next');
+      });
 
-<div class="img_block">
-<a href="page102.html"><img src="101.png" class="img" alt="FAI-CD"></a>
-</div>
-<div class="nav_block">
-<a href="page101.html" class="link">|&lt;&lt;Start</a>&nbsp;&nbsp;-&nbsp;&nbsp;
-<a href="page101.html" class="link">&lt;&lt;Previous</a>&nbsp;&nbsp;-&nbsp;&nbsp;
-<a href="page102.html" class="link">Next&gt;&gt;</a>&nbsp;&nbsp;-&nbsp;&nbsp;
-<a href="page116.html" class="link">End&gt;&gt|</A>
-</div>
- 
-      </div>
-    </div>
-  <div id="footer"></div>
-  </div>
+      // move prev carousel
+      $('.movePrevCarousel').click(function (e) {
+        e.preventDefault();
+        e.stopPropagation();
+        $('.carousel').carousel('prev');
+      });
+    </script>
+
   </body>
 </html>
