do not use https  for download.proxmox.com, it's not supported

--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -89,7 +89,7 @@
 
 					<label for="repo">Add one public available Debian package repository:
 						<input size="14" id="repo" name="repo" /> Only http(s) is allowed.
-Examples:<p> <tt>https://download.proxmox.com/debian/pve buster pve-no-subscription</tt>
+Examples:<p> <tt>http://download.proxmox.com/debian/pve buster pve-no-subscription</tt>
 					  <br>
 					    <tt>https://download.docker.com/linux/debian buster stable</tt>
 					</label>
@@ -146,7 +146,7 @@ Examples:<p> <tt>https://download.proxmox.com/debian/pve buster pve-no-subscript
 						<li style="padding:0px !important; background: none">   <input type="checkbox" name="cl4" value="PRINTSERVER" /> Print server</li>
 						<li style="padding:0px !important; background: none">   <input type="checkbox" name="cl5" value="SSH_SERVER" checked /> Openssh server</li>
 						<li style="padding:0px !important; background: none">   <input type="checkbox" name="cl6" value="STANDARD" checked /> Standard system tools</li>
-						<li style="padding:0px !important; background: none">   <input type="checkbox" name="cl7" value="NONFREE" checked /> Non-free Linux firmware</li>
+						<li style="padding:0px !important; background: none">   <input type="checkbox" name="cl7" value="NONFREE" checked /> Non-free Linux firmware (e.g. for wifi cards)</li>
 					</ul>
 
 					<p style="margin: 0 0 0.2em;">Add packages to be installed:</p>
