link to pdf instead of ps.gz

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -226,7 +226,7 @@ FAI. This code is no longer maintained.
 <li>
 <a href="http://www.opossum.ch/fai/">FAI on Linux for SUN SPARC</A>.
 
-<li> First <a href="../doc/fai_technical_report.ps.gz">technical report</a> about FAI (1999).
+<li> First <a href="../doc/fai_technical_report.pdf">technical report</a> about FAI (1999).
 
 </ul>
 
