--- a/talks/index.html
+++ b/talks/index.html
@@ -29,12 +29,12 @@
 <h3>Talks and other activities of Thomas Lange</h3>
 
 <ul>
-<li>  <a href="../doc/fai_tutorial_1999.ps.gz">The fully automatic installation of a Linux cluster</a>; september 8, 1999; <a href="http://www.linux-kongress.org/1999/"> 6th International Linux Kongress </a>, Augsburg, Germany; 
+<li>  <a href="../doc/fai_tutorial_1999.pdf">The fully automatic installation of a Linux cluster</a>; september 8, 1999; <a href="http://www.linux-kongress.org/1999/"> 6th International Linux Kongress </a>, Augsburg, Germany; 
 <li> Die voll automatische Installation eines Linux Clusters; october 20, 1999; Institut f&uuml;r Computergraphik, TU Wien, &Ouml;sterreich
 <li> <a href="suninstall_vortrag.tar.gz"> Die (voll-) automatische Installation eines Sun Clusters in der Informatik</a> ; april 28, 1999, RRZK, Universit&auml;t zu K&ouml;ln, german
 <li> Die voll automatische Installation eines Linux Clusters; january 11, 2000, Linux-Workshop, Uni K&ouml;ln
 <li> Das Installationstool FAI (Fully automatic Installation); june 15, 2000, <a href="http://www.guug.de/veranstaltungen/ffg/2000/">GUUG Fr&uuml;hjahrsfachgespr&auml;ch 2000</a>
-<li> <a href="../doc/fai_kolloquium_11_2000.ps.gz">FAI - ein Tool zur automatischen Installation von Linux</a>; november 22, 2000, <a href="http://www.uni-koeln.de/RRZK/aktuell/veranstaltungen/praxis00/">Kolloquium: Praxis der Datenverarbeitung</a>
+<li> <a href="../doc/fai_kolloquium_11_2000.pdf">FAI - ein Tool zur automatischen Installation von Linux</a>; november 22, 2000, <a href="http://www.uni-koeln.de/RRZK/aktuell/veranstaltungen/praxis00/">Kolloquium: Praxis der Datenverarbeitung</a>
 <li> Das Installationstool FAI; march 2, 2001, OSIE 2001 - Offene Systeme im Einsatz, Uni K&ouml;ln 
 <li> <a href="../doc/braunschweig.pdf">FAI - Ein Tool zur automatischen Installation von Debian GNU/Linux</a>; may 4.-6., 2001, <a href="http://braunschweiger.linuxtage.de/">3. Braunschweiger Linuxtage</a>, TU Braunschweig
 
