/screenshots almost ready, to do: resize images in slider/other solution

--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -16,6 +16,19 @@
     <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8"/>
     <title>FAI - Fully Automatic Installation</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <style>
+      .middle-indicator {
+        position: absolute;
+        top: 50%;
+      }
+      .middle-indicator-text {
+        font-size: 4.2rem;
+      }
+      a.middle-indicator-text {
+        color: white !important;
+      }
+    </style>
   </head>
 
   <body>
@@ -81,29 +94,130 @@
         <div class="row">
           <div class="col s12">
             <h4>The new autodiscover function of FAI 5.0</h4>
+            <div class="carousel carouselAutodiscover carousel-slider center" data-indicators="true">
+              <div class="carousel-fixed-item center middle-indicator">
+                <div class="left">
+                  <a href="prev" class="movePrevAutodiscoverCarousel middle-indicator-text waves-effect waves-light content-indicator">
+                    <i class="material-icons left  middle-indicator-text">chevron_left</i>
+                  </a>
+                </div>
 
-            <img alt="FAI autodiscover" src="fai1.png" width="600"/>
-
-            <img alt="FAI autodiscover" src="fai2.png" width="600"/>
-
-            <img alt="FAI autodiscover" src="fai3.png" width="600"/>
-
-            <img alt="FAI autodiscover" src="fai4.png" width="600"/>
-
-            <img alt="FAI autodiscover" src="fai5.png" width="600"/>
-
-            <img alt="FAI autodiscover" src="fai10.png" width="600"/>
-
+                <div class="right">
+                  <a href="next" class=" moveNextAutodiscoverCarousel middle-indicator-text waves-effect waves-light content-indicator">
+                    <i class="material-icons right middle-indicator-text">chevron_right</i>
+                  </a>
+                </div>
+              </div>
+              <div class="carousel-item" href="#one!">
+                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai1.png"/>
+              </div>
+              <div class="carousel-item" href="#two!">
+                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai2.png"/>
+              </div>
+              <div class="carousel-item" href="#three!">
+                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai3.png"/>
+              </div>
+              <div class="carousel-item" href="#four!">
+                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai4.png"/>
+              </div>
+              <div class="carousel-item" href="#five!">
+                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai5.png"/>
+              </div>
+              <div class="carousel-item" href="#ten!">
+                <img class="responsive-img" alt="FAI autodiscover" src="/pics/autodiscover/fai10.png"/>
+              </div>
+            </div>
           </div>
         </div>
 
         <div class="row">
           <div class="col s12">
             <h4>A slideshow of an installation via CD</h4>
+            <div class="carousel carouselInstallation carousel-slider center" data-indicators="true">
+              <div class="carousel-fixed-item center middle-indicator">
+                <div class="left">
+                  <a href="prev" class="movePrevInstallationCarousel middle-indicator-text waves-effect waves-light content-indicator">
+                    <i class="material-icons left  middle-indicator-text">chevron_left</i>
+                  </a>
+                </div>
 
+                <div class="right">
+                  <a href="next" class=" moveNextInstallationCarousel middle-indicator-text waves-effect waves-light content-indicator">
+                    <i class="material-icons right middle-indicator-text">chevron_right</i>
+                  </a>
+                </div>
+              </div>
+              <div class="carousel-item" href="#one!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/101.png"/>
+              </div>
+              <div class="carousel-item" href="#two!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/102.png"/>
+              </div>
+              <div class="carousel-item" href="#three!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/103.png"/>
+              </div>
+              <div class="carousel-item" href="#four!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/104.png"/>
+              </div>
+              <div class="carousel-item" href="#five!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/105.png"/>
+              </div>
+              <div class="carousel-item" href="#six!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/106.png"/>
+              </div>
+              <div class="carousel-item" href="#seven!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/107.png"/>
+              </div>
+              <div class="carousel-item" href="#eight!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/108.png"/>
+              </div>
+              <div class="carousel-item" href="#nine!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/109.png"/>
+              </div>
+              <div class="carousel-item" href="#ten!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/110.png"/>
+              </div>
+              <div class="carousel-item" href="#eleven!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/111.png"/>
+              </div>
+              <div class="carousel-item" href="#twelve!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/112.png"/>
+              </div>
+              <div class="carousel-item" href="#thirteen!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/113.png"/>
+              </div>
+              <div class="carousel-item" href="#fourteen!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/114.png"/>
+              </div>
+              <div class="carousel-item" href="#fiveteen!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/115.png"/>
+              </div>
+              <div class="carousel-item" href="#sixteen!">
+                <img class="responsive-img" alt="FAI installation" src="/pics/installation/116.png"/>
+              </div>
+            </div>
+          </div>
+        </div>
+
+<!--
+        <div class="row">
+          <div class="col s12">
+            <h4>The new autodiscover function of FAI 5.0</h4>
+            <img alt="FAI autodiscover" src="fai1.png" width="600"/>
+            <img alt="FAI autodiscover" src="fai2.png" width="600"/>
+            <img alt="FAI autodiscover" src="fai3.png" width="600"/>
+            <img alt="FAI autodiscover" src="fai4.png" width="600"/>
+            <img alt="FAI autodiscover" src="fai5.png" width="600"/>
+            <img alt="FAI autodiscover" src="fai10.png" width="600"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s12">
+            <h4>A slideshow of an installation via CD</h4>
             <a href="/slideshow/"><img alt="slideshow overview" src="slideshow-overview.png" border="0"/></a>
           </div>
         </div>
+-->
 
         <div class="row">
           <div class="col s12">
@@ -130,6 +244,35 @@
     <script src="/js/materialize.js"></script>
     <script>
       M.AutoInit();
+    </script>
+    <script>
+      $('.carousel.carousel-slider').carousel({fullWidth: true, indicators: true});
+
+      // move next carousel (autodiscover)
+      $('.moveNextAutodiscoverCarousel').click(function (e) {
+        e.preventDefault();
+        e.stopPropagation();
+        $('.carouselAutodiscover').carousel('next');
+      });
+      // move prev carousel (autodiscover)
+      $('.movePrevAutodiscoverCarousel').click(function (e) {
+        e.preventDefault();
+        e.stopPropagation();
+        $('.carouselAutodiscover').carousel('prev');
+      });
+
+      // move next carousel (installation)
+      $('.moveNextInstallationCarousel').click(function (e) {
+        e.preventDefault();
+        e.stopPropagation();
+        $('.carouselInstallation').carousel('next');
+      });
+      // move prev carousel (installation)
+      $('.movePrevInstallationCarousel').click(function (e) {
+        e.preventDefault();
+        e.stopPropagation();
+        $('.carouselInstallation').carousel('prev');
+      });
     </script>
   </body>
 </html>
