--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -18,29 +18,6 @@
     <title>Fully Automatic Installation - Slideshow</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
-      @font-face {
-        font-family: 'Material Icons';
-        font-style: normal;
-        font-weight: 400;
-        src: local('Material Icons'), local('MaterialIcons-Regular'), url("https://fonts.gstatic.com/s/materialicons/v18/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2") format('woff2');
-      }
-
-      .material-icons {
-        font-family: 'Material Icons';
-        font-weight: normal;
-        font-style: normal;
-        font-size: 24px;
-        line-height: 1;
-        letter-spacing: normal;
-        text-transform: none;
-        display: inline-block;
-        white-space: nowrap;
-        word-wrap: normal;
-        direction: ltr;
-        -moz-font-feature-settings: 'liga';
-        -moz-osx-font-smoothing: grayscale;
-      }
-
       .middle-indicator {
         position: absolute;
         top: 50%;
@@ -50,17 +27,6 @@
       }
       a.middle-indicator-text {
         color: white !important;
-      }
-      .content-indicator {
-        width: 64px;
-        height: 64px;
-        background: none;
-        -moz-border-radius: 50px;
-        -webkit-border-radius: 50px;
-        border-radius: 50px;
-      }
-      .indicators {
-        visibility: hidden;
       }
     </style>
   </head>
@@ -74,13 +40,13 @@
         <div class="carousel carousel-slider center " data-indicators="true">
           <div class="carousel-fixed-item center middle-indicator">
             <div class="left">
-              <a href="Previo" class="movePrevCarousel middle-indicator-text waves-effect waves-light content-indicator">
+              <a href="prev" class="movePrevCarousel middle-indicator-text waves-effect waves-light content-indicator">
                 <i class="material-icons left  middle-indicator-text">chevron_left</i>
               </a>
             </div>
 
             <div class="right">
-              <a href="Siguiente" class=" moveNextCarousel middle-indicator-text waves-effect waves-light content-indicator">
+              <a href="next" class=" moveNextCarousel middle-indicator-text waves-effect waves-light content-indicator">
                 <i class="material-icons right middle-indicator-text">chevron_right</i>
               </a>
             </div>
@@ -114,7 +80,7 @@
       M.AutoInit();
     </script>
     <script>
-      $('.carousel.carousel-slider').carousel({fullWidth: true, indicators: false});
+      $('.carousel.carousel-slider').carousel({fullWidth: true, indicators: true});
 
       // move next carousel
       $('.moveNextCarousel').click(function (e) {
