Debian 9 not supported any more

--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -93,8 +93,8 @@ from CD/DVD or USB stick with legacy BIOS or UEFI.
 <br>
 <p style="text-align: center;">
 <b>If none of the ISOs fit your needs, use the <a href="/FAIme">FAI.ME build
-service</a></b>. This also supports Debian 9 and 10 with a
-backports kernel.
+service</a></b>. This also supports Debian 10 with a backports kernel
+and Debian testing (aka Debian 11).
 
 <!-- prepared for buster
 
