--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 <h2 style="display:inline-block;width:50%">NEWS</h2>
 
 <ul>
+<li>[Jan 21, 2021] FAIme now adds non-free firmware needed for wireless cards</a></li>
 <li>[Apr 28, 2020] FAI 5.9.4 is released, new images available including <b>UEFI</b> support</a></li>
   <li>[Oct 11-16 2019] Thomas was in Boston, MA joining the Debian Cloud sprint</a></li>
 <li> <b>
